# Conexao

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/connectors/: base.py  registry.py
backend/app/core/: config.py  encryption.py  exceptions.py  logging.py  security.py
backend/app/database/: session.py
backend/app/integrations/: idempotency.py  mapper.py  retry_policy.py  runner.py  validator.py
backend/app/models/: __init__.py  connection.py  connector.py  field_mapping.py  integration_error.py  integration_flow.py  integration_log.py  sync_job.py  tenant.py
backend/app/schemas/: connection.py  field_mapping.py  integration_error.py  integration_flow.py  integration_log.py  sync_job.py  tenant.py
backend/app/validation/: __init__.py  sankhya_readonly.py
backend/app/workers/: celery_app.py  tasks.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py  0002_structural_expansion.py  0003_async_execution_engine.py  0004_sankhya_connection_test_operation.py  0005_sankhya_read_only_flow.py
backend/reports/: .gitignore
backend/scripts/: validate_sankhya_readonly.py
backend/tests/: conftest.py
backend/tests/integration/: test_async_engine_api.py  test_connections_api.py  test_health_api.py  test_platform_core_api.py  test_sankhya_operation_catalog.py  test_sankhya_read_only_flow.py
backend/tests/unit/: test_encryption.py  test_idempotency.py  test_mapper.py  test_retry_policy.py  test_sankhya_client.py  (+1 more)
(+27 files in other folders)
